--- a/purchase-2.html
+++ b/purchase-2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Purchase - Karen Hale</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
 		.clear {
     clear: both;
