--- a/purchase-2.html
+++ b/purchase-2.html
@@ -388,7 +388,7 @@ aside {
         </td>
       </tr> 
     </table>
-  </div>
+  </div><br>
 <div class="clear"></div>
 <div class="main-page-wrapper">
 		
