--- a/purchase-2.html
+++ b/purchase-2.html
@@ -80,6 +80,7 @@ h1 {
 }
 div {
 	display: block;
+
 }
 .row {
     margin-left: -15px;
@@ -381,6 +382,34 @@ aside {
 }
 .scrollToTop .basel-tooltip-label {
     display: none;
+}
+.basel-tooltip .basel-tooltip-label {
+    bottom: 130%;
+    left: 50%;
+    right: auto;
+    top: auto;
+    /* -webkit-transform: translateX(-50%) translateY(0); */
+    -o-transform: translateX(-50%) translateY(0);
+    -ms-transform: translateX(-50%) translateY(0);
+    -sand-transform: translateX(-50%) translateY(0);
+    -moz-transform: translateX(-50%) translateY(0);
+    transform: translateX(-50%) translateY(0);
+}
+.basel-tooltip .basel-tooltip-label {
+    position: absolute;
+    padding: 0 10px;
+    line-height: 28px;
+    font-size: 12px;
+    letter-spacing: .3px;
+    visibility: hidden;
+    white-space: nowrap;
+    color: transparent;
+    background-color: transparent;
+    /* -webkit-transition: all .2s ease-in-out; */
+    -moz-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
 	</style>
