--- a/purchase-2.html
+++ b/purchase-2.html
@@ -473,7 +473,7 @@ aside {
 			</div>
 
 		
-			<div class="testimonial ">
+			<div class="testimonial " style="float: right;">
 				<div class="testimonial-inner">
 										<div class="testimonial-content">
 						<div class="testimonial-rating">
