--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="shoes-1000.jpg">
+
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
   <style>
