--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Galleries - Karen Hale</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
-		.row {
+		/*.row {
     margin-left: -15px;
     margin-right: -15px;
 }
@@ -57,12 +58,147 @@ body {
     height: auto;
     max-width: 100%;
     vertical-align: top;
-}
+}*/
 	</style>
 </head>
 <body>
-	<h1 align="center">Galleries</h1>
-<div class="container">
+	<header style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 30px; " >  
+  <i class='fas fa-phone' style="color: white;"></i>: 209-223-1814  
+
+<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a href="mailto:karenhale@karenhale.com" class= "link" style="color: white;">karenhale@karenhale.com</a>
+</header >
+  <div style="width:100%; background-color:lightblue; background-image: url(backgroundi.jpg); background-repeat: no-repeat; height: 1000%; border-image-width: 100px">
+    <table align=center >
+      <tr >
+        <td align=center style = "padding-top: 0px; color: white;">
+          <p style="font-size: 50pt;  font-family: arial">KAREN HALE</p>
+          <p style="font-size: 26pt; font-family: arial">ABSTRACT, CONTEMPORARY</p>
+          <p style="font-size: 22pt; font-family: arial">MIXED MEDIA PAINTINGS</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          
+ 
+          <div class = "navbar" align = center>
+            <a href="index.html">HOME</a>
+            <div class="dropdown">
+              <button class="dropbtn">PORTFOLIO
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+              <a href="#">LATEST WORK</a>
+              <a href="#">MINI PAINTINGS</a>
+              <a href="#">SMALL PAINTINGS</a>
+              <a href="#">FLORALS</a>
+              <a href="#">STICKS</a>
+              <a href="#">SCULPTURAL</a>
+              <a href="#">ABSTRACTS</a>
+              <a href="landscapes.HTML">LANDSCAPES</a>
+              </div></div>
+            <a href="purchase.html">PURCHASE</a>
+            <a href="gallery.html">GALLERIES</a>
+            <a href="events.html">EVENTS</a>
+            <div class="dropdown">
+              <button class="dropbtn">ABOUT
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+              <a href="#">BIOGRAPHY</a>
+              <a href="contact.html">CONTACT</a>
+              <a href="#">FAQ</a></div></div>
+            <a href="#youtube">YOUTUBE</a>
+            <a href="#blog">BLOG</a>
+          </div>
+
+           
+        </td>
+      </tr> 
+    </table>
+  </div>
+	<h1 style="text-align: center; font-family: arial;"><b>Galleries</b></h1><hr>
+    <table style="margin: 35px;">
+    <tr>
+      <td>
+        <img src="Gallery1.jpg" style="width: 300px; height: 300px;">
+        <p style="text-align: justify; font-family: arial">
+          I have been selected to exhibit with<br>
+          Carre’ d’Artistes, a French Gallery with<br>
+          over 35 locations worldwide. It features<br>
+          a unique display of small affordable<br>
+          original paintings.  My paintings are<br>
+          now available at <a href="https://www.carredartistes.com/us/1142-art-online-gallery-contemporary-artist-rosa-bordeaux">Carré d’artistes</a><br>in Sedona, Arizona</p>
+      </td>
+      <td>
+        <img src="Gallery2.jpg" style="width: 300px; height: 300px;">
+        <p style="text-align: justify; font-family: arial">
+        I have been chosen to be a featured<br>
+        artist in the winter 2015 edition of the<br>
+      magazine “Acrylic Artist”</p>
+      </td>
+      <td>
+        <img src="Gallery3.jpg" style="width: 300px; height: 300px;">
+        <p style="text-align: justify; font-family: arial">
+        My painting “Gold Accents” was selected<br>
+        to be on the cover of American Journal<br>
+      of Critical Care, January 2013 issue.</p>
+      </td>
+    </tr>
+  </table>
+  <table style="margin-left: 35px; display: inline-block;">
+    <tr>
+      <td><h3><b>My pieces are available at these online locations</b></h3><br>
+        <table>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc1.jpeg"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc2.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc3.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc4.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc5.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc6.jpeg"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc7.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc8.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc9.jpeg" style="width: 150px"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc10.jpeg"></a>
+            </td>
+          </tr>
+        </table></td>
+    </tr>
+  </table>
+    <table style="float: right; margin-right: 35px;">
+      <tr>
+        <td><h3><b><a href="" style="color: red;">Painting Demonstrations and more on YouTube</a></b></h3></td>
+      </tr>
+      <tr><td><a href=""><img src="paintingdemo.jpg" style="width: 350px; height: 200px;"></a></td></tr>
+    </table>
+<!-- <div class="container">
 			<div class="row">
 		
 
@@ -115,7 +251,22 @@ body {
 	</div>
 </div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element">
-		<div class="wpb_wrapper">
+		<div class="wpb_wrapper"> -->
+
+	<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
+  <table width = "100%" style="margin: 35px; font-family: arial;">
+    <tr>
+      <td align= "padding-left" style="color: grey">Prices and any other information about the paintings may be obtained by <br><p><a href="contact.html" style="color: white;">contacting me directly via email </a></p>or phone at 209-223-1814.
+      </td>
+      <td align= "padding-left" style="color: grey;">All artwork appearing on this website <br>is the property of Karen Hale and <br>is protected under United States and <br>International law. The artwork may <br>not be reproduced, stored, or <br>manipulated without the written permission <br>of the artist.
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2" align= "center" style="color: grey;"><hr><br>© 2019 <a href="index.html" style="color: white">Karen Hale</a>. All rights reserved.
+      </td>
+    </tr>
+  </table>
+  </footer>
 			
 </body>
 </html>
