--- a/landscapes.html
+++ b/landscapes.html
@@ -3,6 +3,7 @@
 <head>
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<title>Landscapes - Karen Hole</title>
+  <link rel="icon" href="shoes-1000.jpg">
   <link rel="stylesheet" type="text/css" href="style.css">
 	<style>
 		.column_landscape {
