--- a/events.html
+++ b/events.html
@@ -77,7 +77,7 @@ textarea {
 }
 
 input[type=submit] {
-	background-color: red;
+	background-color: #B22222;
 	border: none;
 	color: white;
 	padding: 16px 32px;
@@ -87,7 +87,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-	background-color: blue;
+	background-color:#F08080;
 	border: none;
 	color: white;
 	padding: 16px 32px;
@@ -298,14 +298,19 @@ Open Studio
 <p style="font-weight: normal; padding-left: 15px; padding-right: 15px; font-size: 15pt;">Get the latest news about recent work, upcoming shows, and more.</p>
 
     Email<br>
-    <input type="text" name="email">
+    <input type="text" name="email" style="width: 300px;">
     <br>
     First Name<br>
-    <input type="text" name="firstname">
+    <input type="text" name="firstname" style="width: 300px;">
     <br>
    
     <br><br>
-    <input type="submit" value="SEND">
+    <p style="font-weight: normal;font-size: 8pt; text-align: justify;padding-right: 50px">
+                    By submitting this form, you are consenting to receive marketing emails from: Karen Hale Mixed Media Paintings. You can revoke your consent to receive emails at any time by using the SafeUnsubscribe® link, found at the bottom of every email.
+                    
+                    </p>
+    <input type="submit" value="Sign Up!" style="width: 350px;">
+    
   </form>
 </td>
 </tr>
