--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="icon" href="shoes-1000.jpg">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Events - Karen Hale</title>
   <style>
    .navbar a {
       float: left;
