--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Galleries - Karen Hale</title>
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <link rel="icon" href="shoes-1000.jpg">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
 		
