--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,9 @@ input[type=text] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
+   border-style: solid;
+  border-color: #e3f1f2;
+  border-width: 2px;
 }
 
 textarea {
@@ -21,11 +24,13 @@ textarea {
   height: 150px;
   padding: 12px 20px;
   margin: 8px 0;
-
+   border-style: solid;
+  border-color: #e3f1f2;
+  border-width: 2px;
 }
 
 input[type=submit] {
-  background-color: red;
+  background-color: #B22222;
   border: none;
   color: white;
   padding: 16px 32px;
@@ -35,7 +40,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: blue;
+  background-color: #4682B4;
   border: none;
   color: white;
   padding: 16px 32px;
