--- a/events.html
+++ b/events.html
@@ -3,8 +3,9 @@
 <head>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="icon" href="shoes-1000.jpg">
-  <link rel="stylesheet" type="text/css" href="style.css">
+
   <style>
+
    .navbar a {
       float: left;
       display: block;
@@ -133,10 +134,10 @@ input[type=submit]:hover {
 <header style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 30px; " >  
   <i class='fas fa-phone' style="color: white;"></i>: 209-223-1814  
 
-<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a href="mailto:karenhale@karenhale.com" class= "link" style="color: white;">karenhale@karenhale.com</a>
+<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a href="mailto:karenhale@karenhale.com " class= "link">karenhale@karenhale.com</a>
 </header >
   <div style="width:100%; background-color:lightblue; background-image: url(backgroundi.jpg); background-repeat: no-repeat; height: 1000%; border-image-width: 100px">
-    <table align=center >
+    <table align=center>
       <tr >
         <td align=center style = "padding-top: 0px; color: white;">
           <p style="font-size: 50pt;  font-family: arial">KAREN HALE</p>
@@ -147,7 +148,7 @@ input[type=submit]:hover {
       <tr>
         <td>
           
-          <div class = "navbar" align = center>
+ 
          <div class = "navbar" align = center>
             <a href="index.html">HOME</a>
             <div class="dropdown">
@@ -315,8 +316,8 @@ Open Studio
 </tr>
 		</table>
 	</div>
-	<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
 
+	<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
   <table width = "100%" style="margin: 35px; font-family: arial;">
     <tr>
       <td align= "padding-left" style="color: grey">Prices and any other information about the paintings may be obtained by <br><p><a href="contact.html" style="color: white;">contacting me directly via email </a></p>or phone at 209-223-1814.
@@ -330,5 +331,6 @@ Open Studio
     </tr>
   </table>
   </footer>
+
 </body>
 </html>
