--- a/purchase.html
+++ b/purchase.html
@@ -427,9 +427,9 @@ aside {
     <table align=center >
       <tr >
         <td align=center style = "padding-top: 0px; color: white;">
-          <p style="font-size: 50pt;  font-family: arial">KAREN HALE</p>
-          <p style="font-size: 26pt; font-family: arial">ABSTRACT, CONTEMPORARY</p>
-          <p style="font-size: 22pt; font-family: arial">MIXED MEDIA PAINTINGS</p>
+          <p style="font-size: 50pt;  font-family: arial; color: white">KAREN HALE</p>
+          <p style="font-size: 26pt; font-family: arial;color: white">ABSTRACT, CONTEMPORARY</p>
+          <p style="font-size: 22pt; font-family: arial; color: white">MIXED MEDIA PAINTINGS</p>
         </td>
       </tr>
       <tr>
