--- a/purchase.html
+++ b/purchase.html
@@ -496,7 +496,7 @@ aside {
 						<div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element">
 		<div class="wpb_wrapper">
-			<h3 style="text-align: center;">Purchases can be made directly by <a href="mailto:karenhale@karenhale.com">contacting me via email</a> or call&nbsp;209-223-1814.</h3>
+			<h3 style="text-align: center;"><br>Purchases can be made directly by <a href="mailto:karenhale@karenhale.com">contacting me via email</a> or call&nbsp;209-223-1814.</h3>
 
 		</div>
 	</div>
@@ -509,7 +509,7 @@ aside {
 	</div>
 <div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element">
-		<div class="wpb_wrapper">
+		<div class="wpb_wrapper" style="float: right; padding-right: 800px">
 			<p><a href="http://etsy.me/2uK8ItX">Purchase directly on Etsy</a></p>
 <p><a href="https://www.ugallery.com/ProductList.aspx?Search=%20karen%20hale">ugallery.com</a></p>
 <p><a href="https://www.artfulhome.com/navigate?searchTerm=KAREN+HALE">artfulhome.com</a></p>
@@ -541,7 +541,7 @@ aside {
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6" ><div class="vc_column-inner" ><div class="wpb_wrapper" >			<div id="carousel-5610" class="testimonials-wrapper">
 								<div class="testimonials testimonials-grid testimon-style-boxed testimon-columns-1 testimon-align-center ">
 					
-			<div class="testimonial ">
+			<div class="testimonial " style="float: right">
 				<div class="testimonial-inner">
 										<div class="testimonial-content">
 						<div class="testimonial-rating">
@@ -549,7 +549,10 @@ aside {
 								<span style="width:100%"></span>
 							</span>
 						</div>
-						I opened the box out of curiosity this last Friday before leaving the office. I deployed the paintings on the conference table, I was alone. The scent of the final protective coating was still fresh, revealing the authenticity of the pieces and&nbsp; increasing suspense and expectation. I marveled at the real thing in front of me as I turned them over, standing close and afar for different effect readings, simply mesmerizing. I skimmed through the color transitions, accents and line work; fantastic, the undisputable hand of a Master. My client will be very pleased.						<footer>
+                        <div>
+						I opened the box out of curiosity this last Friday before leaving the office. I deployed the paintings on the conference table, I was alone. The scent of the final protective coating was still fresh, revealing the authenticity of the pieces and&nbsp; increasing suspense and expectation. I marveled at the real thing in front of me as I turned them over, standing close and afar for different effect readings, simply mesmerizing. I skimmed through the color transitions, accents and line work; fantastic, the undisputable hand of a Master. My client will be very pleased.		
+                        </div>				
+                        <footer>
 							Rafell Enriquez, RD Architects							<span>Miami, FL</span>
 						</footer>
 					</div>
