--- a/events.html
+++ b/events.html
@@ -105,14 +105,14 @@ input[type=submit]:hover {
 .div1 {
 	
 	padding-left: 350px;
-  	width: 35%; 
+  	width: 60%; 
   	height: justify;
  	text-align: left; 
   	display: inline-block; 
   	text-align: justify-all;
 }
 .div2 {
-	padding-right: 530px;
+	padding-right: 800px;
 	width:20%;
 }
 .link {
@@ -201,7 +201,7 @@ input[type=submit]:hover {
 			<table class="table2" align="center" style="text-align: center">
 			<tr >
 <td style="padding:0px"><b>April 12-14</td>
-<td style=" font-weight: normal; text-align: left; margin-right:  14pt">
+<td style=" font-weight: normal; text-align: left; margin-right: 14pt;">
 <b><br><br> <br> <br>&nbsp;&nbsp; &nbsp; &nbsp;Menlo Park Art Festival<br></b>
 
 &nbsp; &nbsp; &nbsp; Santa Cruz Ave<br>
