--- a/purchase.html
+++ b/purchase.html
@@ -592,12 +592,12 @@ aside {
 			</div>
 
 		
-			<div class="testimonial ">
+			<div class="testimonial " style="float: right">
 				<div class="testimonial-inner">
 										<div class="testimonial-content">
-						<div class="testimonial-rating">
+						<div class="testimonial-rating" style="float: right">
 							<span class="star-rating">
-								<span style="width:100%"></span>
+								<span style="width:100%;float: right"></span>
 							</span>
 						</div>
 						“The consistent quality of all these works demonstrates skill and sensitivity which took decades of study and practice. Great compositional sense is difficult in representational painting, but even more so in true abstraction. These paintings all show knowledge, creativity and courage. Splendid stuff!”						<footer>
